--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -144,13 +144,13 @@
 /* Menu
 Это меню, которое выползает, когда наводимся на Файл, справка и тд
 По умолчанию там чёрное всё, а нам то не нужно белое и без градиента
+Было исправлено очисткой gtk-widgets.css
 */
-/*
+
 @define-color glossy_black_bg_color_1           #a0a0a0;
 @define-color glossy_black_bg_color_2           #444444;
 @define-color glossy_black_bg_color_3           black;
 @define-color glossy_black_bg_color_4           #333333;
-*/
 
 /* Menuitem and Progressbar 
 При наведении на меню выше, 
