--- a/gtk-3.0/gtk-widgets.css
+++ b/gtk-3.0/gtk-widgets.css
@@ -299,7 +299,8 @@ calendar, dialog, window, scrolledwindow
 }
 decoration
 {
-	margin:                         1px;
+	/* 1px -> 0px Убрать пиксельную обводку чёрным цветом вокруг окна */
+	margin:                         0px;
 }
 paned
 {
